--- a/packages/tools/docusaurus/docs/foundations/layout/sections.mdx
+++ b/packages/tools/docusaurus/docs/foundations/layout/sections.mdx
@@ -182,9 +182,10 @@ TODO: update gutter Token in KickstartDS
 
 `mode: list`
 
-<div className="component-preview" >
+<div className="component-preview">
   <CH.Preview>
     <Section
+     ks-theme="preview"
       mode="list"
       headline={{
         styleAs: 'h2',
@@ -349,7 +350,7 @@ TODO: update gutter Token in KickstartDS
 `mode: tile`<br/>
 `--l-section_col--min-width: 14rem`<br/>
 
-<div className="component-preview">
+<div className="component-preview" ks-theme="preview">
 <CH.Preview>
   <Section
     className="content-nav"
@@ -708,9 +709,9 @@ TODO: update gutter Token in KickstartDS
 `mode: tile`<br/>
 `--l-section_col--min-width: 14rem`<br/>
 
-<div className="component-preview">
+<div className="component-preview" >
   <CH.Preview>
-    <Section width="full" spaceBefore="none" spaceAfter="none">
+    <Section ks-theme="preview" width="full" spaceBefore="none" spaceAfter="none">
       <Storytelling
         image={{
           source: 'https://www.kickstartds.com/img/recipes/hero-angled.png',
