--- a/packages/tools/docusaurus/docs/guides/examples/components/interstitial.mdx
+++ b/packages/tools/docusaurus/docs/guides/examples/components/interstitial.mdx
@@ -124,7 +124,7 @@ This only gives us a rough sketch, though. We still need to adjust the example c
           content: 'Great components',
           level: 'h2',
           pageHeader: false,
-          spaceAfter: 'none',
+          spaceAfter: 'minimum',
           styleAs: 'h2',
           subheadline: 'Sed diam nonumy eirmod tempor invidunt'
         },
@@ -171,7 +171,7 @@ export default function App() {
           content: 'Great components',
           level: 'h2',
           pageHeader: false,
-          spaceAfter: 'none',
+          spaceAfter: 'minimum',
           styleAs: 'h2',
           subheadline: 'Sed diam nonumy eirmod tempor invidunt',
         },
