--- a/packages/tools/docusaurus/docs/foundations/token/design-token/color.mdx
+++ b/packages/tools/docusaurus/docs/foundations/token/design-token/color.mdx
@@ -10,12 +10,12 @@ The token can be found in `color.json`.
 
 ### Color palette
 
-|                                                         | Token                    | Description                                            |
-| ------------------------------------------------------- | ------------------------ | ------------------------------------------------------ |
-| <div className="color-preview color-primary"></div>     | `--ks-color-primary`     | High priority elements                                 |
-| <div className="color-preview color-fg"></div>          | `--ks-color-fg`          | Default foreground color, most prevelant in copy text. |
-| <div className="color-preview color-link"></div>        | `--ks-color-link`        | Hyperlink color                                        |
-| <div className="color-preview color-transparent"></div> | `--ks-color-transparent` | Elements featuring transparency                        |
+|                                                                            | Token                    | Description                                            |
+| -------------------------------------------------------------------------- | ------------------------ | ------------------------------------------------------ |
+| <div ks-theme="preview" className="color-preview color-primary"></div>     | `--ks-color-primary`     | High priority elements                                 |
+| <div ks-theme="preview" className="color-preview color-fg"></div>          | `--ks-color-fg`          | Default foreground color, most prevelant in copy text. |
+| <div ks-theme="preview" className="color-preview color-link"></div>        | `--ks-color-link`        | Hyperlink color                                        |
+| <div ks-theme="preview" className="color-preview color-transparent"></div> | `--ks-color-transparent` | Elements featuring transparency                        |
 
 <CH.Section>
 <CH.Code>
@@ -69,29 +69,47 @@ The token can be found in `color.json`.
 
 ### Color scales
 
-kickstartDS generates color scales based on your Core Token.  
-`to-bg` mixes in `--ks-background-color-default` (by default defined as `--ks-color-fg-inverted`).  
+kickstartDS generates color scales based on your Core Token.
+`to-bg` mixes in `--ks-background-color-default` (by default defined as `--ks-color-fg-inverted`).
 `alpha` adds transparency.
 
-Color scales are not linear. `--ks-color-primary-alpha-3` doesn't mean, its alpha channel is `0.3`. It's just the third most translucent variant. The same applies to `to-bg`.  
+Color scales are not linear. `--ks-color-primary-alpha-3` doesn't mean, its alpha channel is `0.3`. It's just the third most translucent variant. The same applies to `to-bg`.
 We use a cubic Bézier curve to calculate the scales. This way there are more gradations at the beginning and at the end of the scale.
 
 For example, for hover or active states of a component you often need slight shades of a color. With a linear scaling the distance between the shades would be too large. In addition, the colors in the middle of the scale are almost useless, because they have too little contrast in combination with the background color.
 
 <div className="color-scale">
-<div className="color-scale-y-label">
+  <div className="color-scale-y-label">
     <span>`alpha/to-bg scale`</span>
   </div>
   <div className="color-scale-preview">
-    <div className="color-scale-preview-value"><span>1</span></div>
-    <div className="color-scale-preview-value"><span>2</span></div>
-    <div className="color-scale-preview-value"><span>3</span></div>
-    <div className="color-scale-preview-value"><span>4</span></div>
-    <div className="color-scale-preview-value"><span>5</span></div>
-    <div className="color-scale-preview-value"><span>6</span></div>
-    <div className="color-scale-preview-value"><span>7</span></div>
-    <div className="color-scale-preview-value"><span>8</span></div>
-    <div className="color-scale-preview-value"><span>9</span></div>
+    <div className="color-scale-preview-value">
+      <span>1</span>
+    </div>
+    <div className="color-scale-preview-value">
+      <span>2</span>
+    </div>
+    <div className="color-scale-preview-value">
+      <span>3</span>
+    </div>
+    <div className="color-scale-preview-value">
+      <span>4</span>
+    </div>
+    <div className="color-scale-preview-value">
+      <span>5</span>
+    </div>
+    <div className="color-scale-preview-value">
+      <span>6</span>
+    </div>
+    <div className="color-scale-preview-value">
+      <span>7</span>
+    </div>
+    <div className="color-scale-preview-value">
+      <span>8</span>
+    </div>
+    <div className="color-scale-preview-value">
+      <span>9</span>
+    </div>
   </div>
   <div className="color-scale-x-label">
     <span>`opacity/bg-mixin`</span>
@@ -102,29 +120,29 @@ TODO illustrate the scale https://cubic-bezier.com/#1,.1,0,.9
 
 <div className="split-table">
 
-|                                                             | to-bg                        |
-| ----------------------------------------------------------- | ---------------------------- |
-| <div className="color-preview color-primary-to-bg-1"></div> | `--ks-color-primary-to-bg-1` |
-| <div className="color-preview color-primary-to-bg-2"></div> | `--ks-color-primary-to-bg-2` |
-| <div className="color-preview color-primary-to-bg-3"></div> | `--ks-color-primary-to-bg-3` |
-| <div className="color-preview color-primary-to-bg-4"></div> | `--ks-color-primary-to-bg-4` |
-| <div className="color-preview color-primary-to-bg-5"></div> | `--ks-color-primary-to-bg-5` |
-| <div className="color-preview color-primary-to-bg-6"></div> | `--ks-color-primary-to-bg-6` |
-| <div className="color-preview color-primary-to-bg-7"></div> | `--ks-color-primary-to-bg-7` |
-| <div className="color-preview color-primary-to-bg-8"></div> | `--ks-color-primary-to-bg-8` |
-| <div className="color-preview color-primary-to-bg-9"></div> | `--ks-color-primary-to-bg-9` |
+|                                                                                | to-bg                        |
+| ------------------------------------------------------------------------------ | ---------------------------- |
+| <div ks-theme="preview" className="color-preview color-primary-to-bg-1"></div> | `--ks-color-primary-to-bg-1` |
+| <div ks-theme="preview" className="color-preview color-primary-to-bg-2"></div> | `--ks-color-primary-to-bg-2` |
+| <div ks-theme="preview" className="color-preview color-primary-to-bg-3"></div> | `--ks-color-primary-to-bg-3` |
+| <div ks-theme="preview" className="color-preview color-primary-to-bg-4"></div> | `--ks-color-primary-to-bg-4` |
+| <div ks-theme="preview" className="color-preview color-primary-to-bg-5"></div> | `--ks-color-primary-to-bg-5` |
+| <div ks-theme="preview" className="color-preview color-primary-to-bg-6"></div> | `--ks-color-primary-to-bg-6` |
+| <div ks-theme="preview" className="color-preview color-primary-to-bg-7"></div> | `--ks-color-primary-to-bg-7` |
+| <div ks-theme="preview" className="color-preview color-primary-to-bg-8"></div> | `--ks-color-primary-to-bg-8` |
+| <div ks-theme="preview" className="color-preview color-primary-to-bg-9"></div> | `--ks-color-primary-to-bg-9` |
 
-|                                                             | alpha                        |
-| ----------------------------------------------------------- | ---------------------------- |
-| <div className="color-preview color-primary-alpha-1"></div> | `--ks-color-primary-alpha-1` |
-| <div className="color-preview color-primary-alpha-2"></div> | `--ks-color-primary-alpha-2` |
-| <div className="color-preview color-primary-alpha-3"></div> | `--ks-color-primary-alpha-3` |
-| <div className="color-preview color-primary-alpha-4"></div> | `--ks-color-primary-alpha-4` |
-| <div className="color-preview color-primary-alpha-5"></div> | `--ks-color-primary-alpha-5` |
-| <div className="color-preview color-primary-alpha-6"></div> | `--ks-color-primary-alpha-6` |
-| <div className="color-preview color-primary-alpha-7"></div> | `--ks-color-primary-alpha-7` |
-| <div className="color-preview color-primary-alpha-8"></div> | `--ks-color-primary-alpha-8` |
-| <div className="color-preview color-primary-alpha-9"></div> | `--ks-color-primary-alpha-9` |
+|                                                                                | alpha                        |
+| ------------------------------------------------------------------------------ | ---------------------------- |
+| <div ks-theme="preview" className="color-preview color-primary-alpha-1"></div> | `--ks-color-primary-alpha-1` |
+| <div ks-theme="preview" className="color-preview color-primary-alpha-2"></div> | `--ks-color-primary-alpha-2` |
+| <div ks-theme="preview" className="color-preview color-primary-alpha-3"></div> | `--ks-color-primary-alpha-3` |
+| <div ks-theme="preview" className="color-preview color-primary-alpha-4"></div> | `--ks-color-primary-alpha-4` |
+| <div ks-theme="preview" className="color-preview color-primary-alpha-5"></div> | `--ks-color-primary-alpha-5` |
+| <div ks-theme="preview" className="color-preview color-primary-alpha-6"></div> | `--ks-color-primary-alpha-6` |
+| <div ks-theme="preview" className="color-preview color-primary-alpha-7"></div> | `--ks-color-primary-alpha-7` |
+| <div ks-theme="preview" className="color-preview color-primary-alpha-8"></div> | `--ks-color-primary-alpha-8` |
+| <div ks-theme="preview" className="color-preview color-primary-alpha-9"></div> | `--ks-color-primary-alpha-9` |
 
 </div>
 
@@ -364,7 +382,7 @@ TODO illustrate the scale https://cubic-bezier.com/#1,.1,0,.9
 
 ### Color concepts
 
-`interactive` applies to `primary`, `interface` & `clear` variants.  
+`interactive` applies to `primary`, `interface` & `clear` variants.
 `translucent` applies to `primary` variant.
 
 | Concept              | Description                      |
@@ -482,4 +500,9 @@ TODO illustrate the scale https://cubic-bezier.com/#1,.1,0,.9
 
 See the following `Page` in our `Figma` tokens file for a visual representation:
 
-<iframe width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FH7F4P2fsDgEkIcc7U1alk1%2FkickstartDS-Design-Tokens%3Fnode-id%3D1%253A3" allowfullscreen></iframe>
+<iframe
+  width="800"
+  height="450"
+  src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FH7F4P2fsDgEkIcc7U1alk1%2FkickstartDS-Design-Tokens%3Fnode-id%3D1%253A3"
+  allowfullscreen
+></iframe>
